--- a/PianoNote/Asset/Base.lproj/Main2.storyboard
+++ b/PianoNote/Asset/Base.lproj/Main2.storyboard
@@ -13,7 +13,7 @@
         <!--Search View Controller-->
         <scene sceneID="xeO-sG-19Z">
             <objects>
-                <viewController storyboardIdentifier="SearchViewController" id="voS-mc-aRm" customClass="SearchViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="voS-mc-aRm" customClass="SearchViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1Na-ER-T8Y">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
