--- a/PianoNote/Asset/Base.lproj/Main.storyboard
+++ b/PianoNote/Asset/Base.lproj/Main.storyboard
@@ -67,7 +67,79 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XEy-k2-fte" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="721" y="-636"/>
+            <point key="canvasLocation" x="1524" y="-1347"/>
+        </scene>
+        <!--Recycle View Controller-->
+        <scene sceneID="Jns-62-UtQ">
+            <objects>
+                <viewController storyboardIdentifier="RecycleViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="API-DF-QvD" customClass="RecycleViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aPR-cJ-yck">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Od6-P9-Vcl"/>
+                    </view>
+                    <toolbarItems>
+                        <barButtonItem id="yt5-cL-ZhY">
+                            <connections>
+                                <action selector="toolWithRestore:" destination="API-DF-QvD" id="2zV-aE-GR3"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="96Y-CK-9O7"/>
+                        <barButtonItem id="rQW-I2-ao8">
+                            <connections>
+                                <action selector="toolBarWithLeft:" destination="fti-cI-utA" id="uoe-qr-yXC"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="44t-dF-dXR"/>
+                        <barButtonItem systemItem="trash" id="JDG-mN-lzy">
+                            <connections>
+                                <action selector="toolWithRemove:" destination="API-DF-QvD" id="m1e-bo-Cvj"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" id="SOq-iX-gEw">
+                        <barButtonItem key="rightBarButtonItem" id="pzE-5B-aOO">
+                            <connections>
+                                <action selector="naviWithSelectAll:" destination="API-DF-QvD" id="WXI-ZR-wVG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="veq-mk-TTA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2250" y="-1347"/>
+        </scene>
+        <!--Facebook View Controller-->
+        <scene sceneID="HWs-2v-BDo">
+            <objects>
+                <viewController storyboardIdentifier="FacebookViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ok0-aC-h19" customClass="FacebookViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jrg-eS-4bK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="hFc-gl-NCd"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vZk-R1-ljb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2988" y="-1347"/>
+        </scene>
+        <!--Facebook Detail View Controller-->
+        <scene sceneID="ryZ-r8-QTH">
+            <objects>
+                <viewController storyboardIdentifier="cebookDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="aHz-e6-BeV" customClass="FacebookDetailViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8eb-dl-Rzh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="LNT-DO-laN"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w06-Df-1h6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3719" y="-1347"/>
         </scene>
         <!--Splash View Controller-->
         <scene sceneID="thZ-1x-ez0">
